# SyncSensation

./: CMakeLists.txt
include/: AsyncWebSocket.hpp
src/: AsyncTcpClient.cpp  AsyncTcpClient.hpp  AsyncWebSocketClient.cpp  AsyncWebSocketClient.hpp  ButtPlugClient.cpp  ButtPlugClient.hpp  main.cpp
